Minor icon and string changes. Rookie error of having build files in repo.

--- a/Application/src/main/res/values/base-strings.xml
+++ b/Application/src/main/res/values/base-strings.xml
@@ -15,7 +15,7 @@
  limitations under the License.
 -->
 <resources>
-    <string name="app_name">ActionBarCompat-Basic</string>
+    <string name="app_name">ActionBarCompat-Edit</string>
     <string name="intro_message">
         <![CDATA[
         
@@ -24,6 +24,8 @@
             displays action items. It covers inflating items from a menu resource, as well as adding
             an item in code. Items that are not shown as action items on the Action Bar are
             displayed in the action bar overflow.
+
+            This can be a multi line, multi paragraph string.
             
         
         ]]>
