--- a/Application/src/main/res/layout/sample_main.xml
+++ b/Application/src/main/res/layout/sample_main.xml
@@ -19,4 +19,4 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:text="@string/intro_message"
-    android:gravity="center" />
+    android:gravity="top" />
